--- a/chapter4.tex
+++ b/chapter4.tex
@@ -44,6 +44,7 @@
    \caption{プロトタイプのスクリーンショット．プロトタイプ時には軸の表示を行っていなかったが，横軸は発言数，縦軸は発言中の文の数のうち何文がどのグループに分類されるかという割合を表す．一番上が縦軸の1．}
    \label{fig:system1mogi2}
  \end{figure}
+プロトタイプ時には軸の表示を行っていなかったが，図\ref{fig:system1mogi2}において，横軸は発言数，縦軸は発言中の文の数のうち何文がどのグループに分類されるかという割合を表す
 % \begin{figure}
   % \begin{center}
 %     \includegraphics[width=\linewidth,angle=90]{system1a0911go.png}
@@ -281,7 +282,7 @@
 それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたが
 らなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそ
 うなるのは絶対に許せない！！』というような文章について，専門家は次の通りに分類する．最初の文は愛の課題，
-第2文は仕事の課題，夫がそうなるのは絶対許せない！！は愛の課題に分類する．
+第2文は仕事の課題，第3文は愛の課題に分類する．
 
 
 
@@ -293,7 +294,7 @@
 
 
 
-\item どこがどの発言を表しているかわからない，またラジオボタンが多すぎてグラフが下の方にいく
+%\item どこがどの発言を表しているかわからない，またラジオボタンが多すぎてグラフが下の方にいく
 という問題に対しては，カウンセラーからクライエントへの質問を示す縦棒をマウスオーバーすることによって，周辺の発言を表示する機能を追加することで解決を図るべきである．
 
 
