--- a/chapter5.tex
+++ b/chapter5.tex
@@ -16,7 +16,7 @@
 
 
 
-\section{евеые┤еъе║ер}
+%\section{евеые┤еъе║ер}
 
 
 ╦▄─є░╞е╖е╣е╞ерд╬евеые┤еъе║ерд╦д─ддд╞└т╠└д╣дыбе
@@ -89,7 +89,16 @@
 
 
 %ележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩╕д╬е░еыб╝е╫д╬╩м╬рдЄ╣╘джбед│д╬╩м╬р╩¤╦бд╦д─ддд╞д╧╦▄└с╞тд╟╕х╜╥д╣дыбе
-д╜д╬╕хбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩╕д╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╣дыбее░еще╒д╬▓─╗ы▓╜д╬║▌д╦бде╟б╝е┐д╬▓─╗ы▓╜дфе╟б╝е┐д╦┤Ёд┼ддд╞е╔енехесеєе╚дЄ┴р║юд╣дыд┐дсд╦╗╚═╤д╡дьд╞дддыJavaScriptещеде╓ещеъд╟двдыD3.js\cite{bostock2012d3}дЄ╗╚═╤д╖д┐бе
+д╜д╬╕хбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩╕д╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╣дыбее░еще╒д╬▓─╗ы▓╜д╬║▌д╦бде╟б╝е┐д╬▓─╗ы▓╜дфе╟б╝е┐д╦┤Ёд┼ддд╞е╔енехесеєе╚дЄ┴р║юд╣дыд┐дсд╦╗╚═╤д╡дьд╞дддыJavaScriptещеде╓ещеъд╟двдыD3.js\cite{bostock2012d3}дЄ╗╚═╤д╖д┐бе╠╧╡╝е╟б╝е┐дЄ╦▄е╖е╣е╞ерд╦╞■╬╧д╖д┐╕хд╬└т╠└╔╒дне╣епеъб╝еєе╖ече├е╚▓ш┴№дЄ┐▐\ref{fig:gamenseni}д╦╝ид╣бе
+ \begin{figure}
+%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth,angle=90]{gamenseni.png}
+   \end{center}
+   \caption{jsonе╒ебедеы╞╔д▀╣■д▀╕хд╬е╖е╣е╞ере╣епеъб╝еєе╖ече├е╚б╩└т╠└╔╒днб╦}
+   \label{fig:gamenseni}
+%\end{landscape}
+ \end{figure}
 
 
 jsonе╒ебедеы╞тд╬╦▄╩╕д╬╖┴╝░д╦д─ддд╞└т╠└д╣дыбе
@@ -99,8 +108,8 @@ jsonе╒ебедеы╞тд╬╦▄╩╕д╬╖┴╝░д╦д─ддд╞└т╠└д╣дыбе
 ▓г╝┤д╧╗■┤╓╝┤дЄ╔╜╕╜д╖д╞дддыбед┐д└д╖┬╨╛▌е╟б╝е┐д╟двды╜ёдн╡пд│д╖е╞ене╣е╚е╟б╝е┐длдщд╧╝┬║▌д╬╖╨▓с╔├┐Їд╧╞╔д▀╝шдьд╩ддд╬д╟бд╞╔д▀╣■д▐д╗д┐е╟б╝е┐╞тд╦дкд▒дыепещедеиеєе╚д╬╚п╕└╬╠д╬╬▀╖╫д╬╩╕╗·┐ЇдЄ▓г╝┤бдд─д▐дъ╗■┤╓╝┤д╚д╖д┐бе╕х╜╥д╣дыележеєе╗ещб╝д╬╝┴╠фдЄ╔╜╕╜д╣ды╜─╦└д╧д│д╬╗■┤╓╝┤д╦д╜д├д╞╜╨╕╜д╣дыбеележеєе╗ещб╝д╚епещедеиеєе╚д╬╚п╕└д╬╞■дь┬╪дядъдмдядлдъдфд╣дддшджд╦бд└╤д▀╜┼д═└▐дь└■е░еще╒дмепещедеиеєе╚д╬╚п╕└д╬е░еыб╝е╫╩м╔█дЄд┴дчджд╔╔╜д╖д╞дддыд╬д╧╩╪╡╣╛х╚п╕└╔Ї╩мд╬├ц▒√╔Ї╩мд╦д╩д├д╞дддыбе
 ╜─╝┤д╧╚п╕└├цд╬1╩╕д╬┐Їд╬джд┴бдд╔д╬е░еыб╝е╫д╦▓┐╩╕╞■д├д╞дддыдлд╚дддж╩╕д╬┐ЇдЄ╔╜д╖д╞дддыбе
 
-д│д│д╟jsonе╟б╝е┐дЄ╞■╬╧д╖д┐╕хд╬епещедеиеєе╚д╬╚п╕└д╬│╞1╩╕д╬╜щ┤№╩м╬р╛ї┬╓д╬╩м╬р╩¤╦бд╦д─ддд╞└т╠└д╣дыбе
-д▐д║бддвдщдлд╕дсд│д┴дщд╟
+%д│д│д╟jsonе╟б╝е┐дЄ╞■╬╧д╖д┐╕хд╬епещедеиеєе╚д╬╚п╕└д╬│╞1╩╕д╬╜щ┤№╩м╬р╛ї┬╓д╬╩м╬р╩¤╦бд╦д─ддд╞└т╠└д╣дыбе
+%д▐д║бддвдщдлд╕дсд│д┴дщд╟
 %╝бд╦бд│╞├▒╕ь╖▓дЄ┤▐дрепещедеиеєе╚д╬╚п╕└д╬1╩╕дЄе░еыб╝е╫╩мд▒дЄд╖д╞ддд├д┐бе
 
 
@@ -114,6 +123,14 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 └╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д╩д├д╞ддды╜─╦└д╧бдележеєе╗ещб╝д╬╝┴╠ф╞т═╞д╬╖┴┬╓дЄ╝ид╣бе
 
 
+\subsubsection{еще╕еке▄е┐еє}
+
+%\item 
+%едеєе┐ещепе╞еге╓└ндмд╩ддбд
+└╤д▀╜┼д═└▐дь└■е░еще╒дм╔┴▓шд╡дьд┐╕хд╦бде░еще╒║╕▓╝д╬еще╕еке▄е┐еєеиеъевд╦д╞бдепещедевеєе╚д╬╚п╕└д╬│╞1╩╕дкдшд╙ележеєе╗ещб╝д╬│╞1╚п╕└д╦дкддд╞бд╩м╬рдЄ╩╤дидыд╚┬и╗■д╦е░еще╒╔┴▓шд╦╩╤╣╣дм┼м═╤д╡дьдыдшджд╦д╖д┐бе
+%╦▄еще╕еке▄е┐еєеиеъевдмд▀д┐д╖д┐═╫╖яд╦д─ддд╞д╧бд╔╒╧┐д╦д╞╡н╜╥д╣дыбе
+
+
 \subsubsection{╕╢╩╕╔╜╝и╡б╟╜}
 
 %╦▄└сд╟д╧бд═╫╖ядЄ╦■д┐д╣д┐дсд╬╗ы│╨┼к╔╜╕╜(Visual Representation, Visual Design)бдецб╝е╢б╝едеєе┐ещепе╖ечеєд╩д╔дЄ╜┼┼└┼кд╦└т╠└д╣дыбе
@@ -123,16 +140,10 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 \item д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩дд
 \item еще╕еке▄е┐еєдм┬┐д╣дод╞е░еще╒дм▓╝д╬╩¤д╦дддп
 \end{itemize}
-д╚дддж╠ф┬ъд╦┬╨д╖д╞д╧бдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠фдЄ╝ид╣╜─╦└дЄе▐еже╣екб╝е╨б╝д╣дыд│д╚д╦дшд├д╞бде░еще╒▒ж▓╝д╦╝■╩╒д╬╚п╕└дЄ╔╜╝ид╣ды╡б╟╜дЄ─╔▓├д╣дыд│д╚д╟▓Є╖шдЄ┐▐д├д┐бе
+д╚дддж╠ф┬ъд╦┬╨д╖д╞д╧бдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠фдЄ╝ид╣╜─╦└дЄе▐еже╣екб╝е╨б╝д╣дыд│д╚д╦дшд├д╞бде░еще╒▒ж▓╝д╦╝■╩╒д╬╚п╕└дЄ╔╜╝ид╣ды╡б╟╜дЄ─╔▓├д╣дыд│д╚д╟▓Є╖шдЄ┐▐д├д┐бе╕лдфд╣д╡д╬д┐дсбде░еще╒д╬┐зд╦┬╨▒■д╖д┐╩╕╗·┐зд╟д╧д╩дп╣їдд╩╕╗·д╟│╞╚п╕└дЄ╔╜╝ид╖бдд╜дьдЄе░еще╒д╚┬╨▒■д╖д┐┐зд╬╢∙╔╒дн│ч╕╠б┌б█д╟░╧дждшджд╦д╖д┐бе
 %д▐д┐ележеєе╗ещб╝дфепещедеиеєе╚д╬╚п╕└д╦┤╪д╣дые░еыб╝е╫╩м╬рдЄ╝ъ╞░─√└╡д╣дыеще╕еке▄е┐еєд╬еиеъевд╚д▐д╚дсд╞бде░еще╒дшдъ▓╝┬жд╦╩╕╛╧╔╜╝ид╡дьдыдшджд╦еьедевеже╚╩╤╣╣дЄ╣╘д├д┐бе
 
 
-\subsubsection{еще╕еке▄е┐еє}
-
-%\item 
-%едеєе┐ещепе╞еге╓└ндмд╩ддбд
-└╤д▀╜┼д═└▐дь└■е░еще╒дм╔┴▓шд╡дьд┐╕хд╦бде░еще╒║╕▓╝д╬еще╕еке▄е┐еєеиеъевд╟бдепещедевеєе╚д╬╚п╕└д╬│╞1╩╕дкдшд╙ележеєе╗ещб╝д╬│╞╝┴╠фд╦дкддд╞╩м╬рдЄ╩╤дидыд╚бд┬и╗■д╦е░еще╒╔┴▓шд╦╩╤╣╣┼м═╤д╡дьдыдшджд╦д╖д┐бе
-%╦▄еще╕еке▄е┐еєеиеъевдмд▀д┐д╖д┐═╫╖яд╦д─ддд╞д╧бд╔╒╧┐д╦д╞╡н╜╥д╣дыбе
 
 %\item 
 %еэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╜ъ═╫╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бед╜дьдЄ╝їд▒бд║г▓єд╧е╫еэе░ещер╛хд╬╠╡┬╠д╩╡н╜╥дЄ╛╩дпд│д╚д╟╠є5╔├д╦├╗╜╠д╖д┐бе
@@ -148,7 +159,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 %\item 
-%╩╕╗·┐зд╬▓■┴▒дм╡сдсдщдьд╞ддд┐дмбд╩╕╗·┐з╣їдд╩╕╗·дЄ┐зд╬д─ддд┐╦╧д─дндлд├д│б┌б█д╟░╧дждшджд╦д╖д┐бе
+%╩╕╗·┐зд╬▓■┴▒дм╡сдсдщдьд╞ддд┐дмбд╩╕╗·┐з╣їдд╩╕╗·дЄ┐зд╬д─ддд┐╢∙╔╒дн│ч╕╠б┌б█д╟░╧дждшджд╦д╖д┐бе
 
 %\item 
 %└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бд╝┤дЄ╔╜╝ид╣дыдшджд╦д╖д┐бе▓г╝┤д╬├▒░╠д╧╞■╬╧д╖д┐е╞ене╣е╚е╟б╝е┐д╬├цд╟д╬епещедеиеєе╚д╬┴┤д╞д╬╚п╕└д╬┴┤д╞д╬╩╕╗·┐Їбд╜─╝┤д╬├▒░╠д╧епещедеиеєе╚д╬│╞╚п╕└д╬├цд╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫д╬д╔д╬е░еыб╝е╫д╦╩м╬рд╡дьды╩╕д╬┐Їдм▓┐╩╕двдыдлд╟двдыбе
