--- a/chapter6.tex
+++ b/chapter6.tex
@@ -57,8 +57,7 @@
 
 
 
-\begin{enumerate}
-  \item 模擬データを入力した際の出力結果を図\ref{fig:mogi_shutsuryoku}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．
+まず模擬データを入力した際の出力結果を図\ref{fig:mogi_shutsuryoku}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:mogi_shutsuryoku}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」というカウンセラーの発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこのカウンセラー発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」というクライエントの発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
@@ -68,7 +67,8 @@
    \label{fig:mogi_shutsuryoku}
 %\end{landscape}
  \end{figure}
-  \item 2014年11月19日クライエントB瞑想前のデータを入力した際の出力結果を図\ref{fig:141119bmae}に示す．
+
+次に，2014年11月19日クライエントB瞑想前のデータを入力した際の出力結果を図\ref{fig:141119bmae}に示す．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
@@ -78,20 +78,21 @@
    \label{fig:141119bmae}
 %\end{landscape}
  \end{figure}
-\begin{enumerate}
+\begin{itemize}
   \item （19発言目以降）開かれた質問→200文字程度，「愛」2文→相槌→1000文字程度，「愛」10文
   \item （57発言目以降）開かれた質問→100文字程度，「愛」6文→開かれた質問→700文字程度，「愛」9文
-\end{enumerate}
+\end{itemize}
 となっている通り，1回目の開かれた質問の直後ではなく，その直後の発言の後に相槌かもう１度開かれた質問を行うことによって，対人関係上の問題をより多く引き出せている事例が見受けられた．
-  \item 前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．
-\end{enumerate}
+
+また，前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．なお，最長のテキストデータは約4300文字である．
 
 
 
 
 
 
-\section{エキスパートレビュー}
+
+\section{ユーザーからのコメント}
 
 6.1節で述べたデータをカウンセラー1名に渡し，Web上から本提案システムを利用していただき、主に本システムの使い勝手についてコメントを得た．
 
@@ -102,18 +103,13 @@
 %ラジオボタンの使い勝手に関するコメント
 
 アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，自身の症状についての記述は，愛・交友・
-仕事のどれにも当てはまらないことが多いため，第４のタスクとされるself task自
+仕事のどれにも当てはまらないことが多く，症状に囚われているクライエントは自己の課題が大半になるといえるため，第４のタスクとされるself task自
 己，第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
-ただく方がいいかもしれないというコメントを得た．症状に囚われているクライエントは，自己の課題が大半
-になるといえる．
+ただく方がいいかもしれないというコメントを得た．
 
 
 
-また，本提案システム全体の配色面に関してさらなる視認性の向上が求められている．具体的には
-\begin{enumerate}
-  \item モニターのブルーライトカットの影響で特に黄色の文字が見えない．黄色と灰色は，バックの白とかぶって見えにくくなっている
-  \item 青色の【】は黒字と判別がつきにくい
-\end{enumerate}
+また，本提案システム全体の配色面に関してさらなる視認性の向上が求められている．具体的には黄色と灰色は，バックの白とかぶって見えにくくなっているという点と，青色の隅付き括弧【】が黒字と判別がつきにくい
 という点である．
 
 
