--- a/chapter7.tex
+++ b/chapter7.tex
@@ -4,8 +4,12 @@
 
 
 
-まず，6.2節で述べた結果から，
-最長データで4000文字以上の会話の流れの文章を文字で読んで読解するより，ひと目で早く会話の流れを理解できると考える．
+まず，6.2節で述べた
+\begin{itemize}
+  \item 模擬データおよびカウンセリングを実際に書き起こしたテキストデータを提案システムに入力した際にカウンセラーとクライエントの会話の流れの可視化に成功した．
+  \item 上記の際に読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．
+\end{itemize}
+という結果から，最長データで4000文字以上の会話の流れの文章を文字で読んで読解するより，ひと目で早く会話の流れを理解できると考える．
 したがって，会話の流れがベテランのカウンセラーにとってすぐにわかるようになることが，本研究の目的を達成したと考える．
 
 
@@ -22,4 +26,4 @@
 
 アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」だけでなく「自己」「スピリチュアル」も選択肢に入れてほしいというコメントを得た．これは，クライエント自身の症状の話については「愛」「仕事」「交友」に分類されず，「自己」「スピリチュアル」に分類されることが多いからである．したがって，自己とスピリチュアルの項目を積み重ね折れ線グラフに取り入れる必要性があると考えられるが，次に述べる配色の問題にもかかわってくるので，色の使い分けに注意したいと考える．
 
-ページ右下側に表示されるカウンセラーの実際の発言内容を囲う墨つきかっこも色だけでは判別がつかないというコメントをいただいている．薄い色や青色が見えにくいという問題に対しては、ユーザーであるベテランのカウンセラーがお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由があげられる．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要があると考えられる．
+ページ右下側に表示されるカウンセラーの実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントをいただいている．薄い色や青色が見えにくいという問題に対しては、ユーザーであるベテランのカウンセラーがお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由があげられる．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要があると考えられる．
