--- a/chapter8.tex
+++ b/chapter8.tex
@@ -22,13 +22,13 @@
   \item 患者の各発言内において， 「交友」に属する文における文字数の合計(単位：文字)
   \item 患者の各発言内において，全ての文字数に対して「交友」に属する文の文字数が占める割合（単位：％）
 \end{enumerate}
-どのような数値を用いればより適当な判断が可能か，吟味する必要性があると考える．
+など，どのような数値を用いればより適当な判断が可能か，吟味する必要性があると考える．
 \item 縦棒の上に発言番号を振ることで，どの縦棒がどのカウンセラーの発言か，よりわかりやすくする．
 \item アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，特に患者の症状に関しては「愛」「仕事」「交友」のどれにも属さず，第4，第5のグループである「自己」と「スピリチュアル」に属することが多いので，「自己」と「スピリチュアル」のグループを加える必要性があると考える．
 \item ブルーライトカットのディスプレイなどを使用しているユーザーが色を見分けにくいなどの理由から，本提案システム全体の配色面に関してまだ改善の余地があると考える．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要性があると考えられる．
 \item 本提案システムでは，カウンセリングを書き起こしたテキストデータを筆者が手動で指定のフォームのJSONファイルにつくりなおしてから，本提案システムのユーザーであるベテランのカウンセラーにそのJSONファイルを渡して本提案システムをお使いいただいていたが，ユーザー側で最初から最後まで簡単に可視化を行うためには，カウンセリングを書き起こしたテキストデータを自動で本システムの入力データフォーマットとなるJSONファイルに変換する機能を搭載する必要性もあると考える．
 \item 本システムのユーザーのカウンセラーに，入力する書き起こしテキストデータの文章量が多いと積み重ね折れ線グラフの縦棒が密集してしまうので，全体の積み重ね折れ線グラフから一部分を抜き出して描画するズーム機能を提案したところ，是非欲しいとのことであったので，搭載する予定である．
-\item ユーザーから見た本提案システムの使い勝手について，まだ定量的な評価を行っていない．本システムのユーザーとして想定するより多くのベテランカウンセラーに使っていただき，意味差別法\cite{attrakdiff}などによる定量的評価が必要であると考える．
+\item ユーザーから見た本提案システムの使い勝手について，まだ定量的な評価を行っていない．本システムのユーザーとして想定するより多くのベテランカウンセラーに使っていただき，定量的評価を行うことが必要であると考える．たとえば意味差別法（semantic differential scale method）\cite{attrakdiff}は，見やすい-見にくい，使いやすい-使いづらいなどの対立する形容詞の対に関して5段階あるいは7段階の尺度を用いて，商品やシステムの感情的なイメージを定量的に分析する方法である．
 \end{itemize}
 
 
