--- a/chapter4.tex
+++ b/chapter4.tex
@@ -8,350 +8,61 @@
 
 
 
-ニーズ調査のために，本提案システムのプロトタイプを開発した．プロトタイプ動作画面ののスクリーンショットを図\ref{fig:systemtsukaikata}に示す．
- \begin{figure}
+カウンセリング指導を行う際のニーズを調査するために，本提案システムのプロトタイプを開発した．プロトタイプ動作画面の想定図を図\ref{fig:systemtsukaikata}に示す．プロトタイプ時には軸の表示を行っていなかったが，図\ref{fig:system1mogi2}において，横軸は発言数，縦軸は発言中の文のうち何文がどのグループに分類されるかという割合を表す．模擬データでの可視化結果を図\ref{fig:system1mogi2}に示す．
+\begin{figure}
    \begin{center}
-     \includegraphics[width=\linewidth,angle=90]{systemtsukaikata.png}
+     \includegraphics[width=\linewidth]{systemtsukaikata.png}
    \end{center}
-   \caption{プロトタイプの想定図．プロトタイプ時には軸の表示を行っていなかったが，横軸は発言数，縦軸は発言中の文の数のうち何文がどのグループに分類されるかという割合を表す．一番上が縦軸の1}
+   \caption{プロトタイプの想定図}
    \label{fig:systemtsukaikata}
  \end{figure}
-
-%まず，ブラウザ上で各テキストのjsonファイルを読み込んで形態素解析する．
-%形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．
-%カウンセリング文字起こしテキストデータを形態素解析し，「愛」「仕事」「交友」に関連する単語を探す．そこから，カウンセラーからの質問形態と， 「愛」「仕事」「交友」の単語のグループの時間経過に沿った分布変化を可視化した．
-
-
-
-%jsonファイル内の本文の形式について説明する．全角表示のコロン（：）で話者の交代を認識，全角表示のコロン（：），全角表示の句点（．）またはクエスチョンマーク（？,?）で文の終わりを認識するよう設定されている．そのため，話者が交代するたびに全角表示のコロン（：）で区切れ目を示さないといけない．
-
-%\subsubsection{積み重ね折れ線グラフ}
-%図\ref{fig:systemtsukaikata}において，まず積み重ね折れ線グラフはクライエントの1回1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・愛関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
-%横軸は時間軸を表現している．ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので，読み込ませたデータ内におけるクライエントの発言量の合計に対して
-
-%\subsubsection{カウンセラーの質問を表現する縦棒}
-
-%Ericら\cite{taskdriven}は，トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．一方本研究では，カウンセラーとクライエントの会話において，クライエントは文ごとに，カウンセラーは発言ごとに描画を行いたい，かつ選択肢表示のためにグラフを省スペースしたいという観点から，カウンセラーの発言を横軸より下に折れ線グラフとして描画するのではなく，クライエントの発言のグループ分布を示す積み重ね折れ線グラフに重ねて縦棒として表示するようにした．
-
-
-%積み重ね折れ線グラフに重なっている，紫色または濃いグレー色の縦棒は，カウンセラーの質問内容の形態を示す．紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃いグレー色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している．第1章で述べた通り，クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
-模擬データでの可視化結果を図\ref{fig:system1mogi2}%，2014年11月検討会 クライエントA瞑想後での可視化結果を図\ref{fig:system1a0911go}，2015年11月検討会 クライエントCのデータでの可視化結果を図\ref{fig:system1_1002}
-に示す．
- \begin{figure}
+\begin{figure}
    \begin{center}
-     \includegraphics[width=\linewidth,angle=90]{system1mogi2.png}
+     \includegraphics[width=\linewidth]{system1mogi2.png}
    \end{center}
-   \caption{プロトタイプのスクリーンショット．プロトタイプ時には軸の表示を行っていなかったが，横軸は発言数，縦軸は発言中の文の数のうち何文がどのグループに分類されるかという割合を表す．一番上が縦軸の1．}
+   \caption{プロトタイプのスクリーンショット}
    \label{fig:system1mogi2}
- \end{figure}
-プロトタイプ時には軸の表示を行っていなかったが，図\ref{fig:system1mogi2}において，横軸は発言数，縦軸は発言中の文の数のうち何文がどのグループに分類されるかという割合を表す
-% \begin{figure}
-  % \begin{center}
-%     \includegraphics[width=\linewidth,angle=90]{system1a0911go.png}
-  % \end{center}
-%   \caption{提案システム１の'14年11月検討会A瞑想後での可視化結果}
-%   \label{fig:system1a0911go}
-% \end{figure}
-% \begin{figure}
-%   \begin{center}
-%     \includegraphics[width=\linewidth,angle=90]{system1_1002.png}
-%   \end{center}
-%   \caption{提案システム１の'15年11月検討会Cでの可視化結果}
-%   \label{fig:system1_1002}
-% \end{figure}
+\end{figure}
 
-
-
-
-
-
-
-
-
-%\subsection{考察}
-%クライエントからの返答だけでなく，カウンセラーの質問区分けもラジオボタンによって手動で行えるように修正したい．また，どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので，マウスオーバーによって発言内容が表示される仕組みを作りたい．
-
-%原文から，カウンセラーからクライエントへの質問事項の分類の指標として，クライエントの発言をうながしてクライエント自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであると考えられる．
-
-
-
-
-
-%\subsubsection{どこがどの発言を表しているかわからない}
-
-
-
-%\subsubsection{インタラクティブ性がない}
-%描画後にラジオボタンを変えても反応がない．現状ではその場でラジオボタンの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，ラジオボタンの選択を変えることでシームレスにグラフが変化することが求められた．
-
-%\subsubsection{「その他」}
-%「開かれた質問」「閉じられた質問」だけでなく，相槌や世間話を「その他」を設けるべきと考えられる．提案システム1においては，「なぜ」「何」などの5W1Hを訊くような疑問視を含む発言を「開かれた質問」として定義し，それ以外を「閉じられた質問」と定義していたので，提案システム1における「閉じられた質問」をさらに，以降のシステムにおいて「閉じられた質問」と「その他」にわける必要があると考えられる．
-
-
-%\subsubsection{ラジオボタン表示時間}
-
-%カウンセリングの文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかるので，この短縮が求められる．
-
-
-
-
-
-%\section{提案システム２}
-
-
-%提案システム2で専門家からされた指摘を元に修正および改善を行い，提案システム3を作成した．
-
-
-
-
-%ここでは主に，提案システム2が抱えていた問題への対処について述べる．
-
-%\subsubsection{どこがどの発言を表しているかわからない}
-%提案システム１では，どの時間軸座標がどの発言を指し示すか明記していなかった．その問題を解決するために，提案システム２においては，マウスオーバーによって発言内容が表示される仕組みを作った．カウンセラーからの質問の区分けを示す各縦棒について，それぞれその上をマウスオーバーするたびに，積み重ね折れ線グラフを描画するSVG領域のすぐ上に，各々その縦棒が指し示すカウンセラーからの質問に対応する発言，および，そのカウンセラーの発言から，クライエントの発言とカウンセラーの発言を含めてそれぞれ前後3発言ずつを描画するようにプログラムした．つまり，クライエントの発言が前後2発言ずつ，カウンセラーの発言が3発言表示されているようにした．
-
-%\subsubsection{インタラクティブ性}
-%また，提案システム1においてはインタラクティブ性がなかった．各単語をクライエントの話題の分野ごとにわけるラジオボタンについて，提案システム1ではその場でラジオボタンの選択を変えただけではグラフにその選択の変更が反映されず，１回１回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じていた．
-
-%しかし提案システム2では，ブラウザ上でページをリロードしなくも，ラジオボタンの選択を変えることでシームレスにグラフが変化するように改善した．また，クライエントの話題の分野を単語ごとに決め打ちしたものだけでなく，決め打ちしていないものに関しても選択肢を表示し選択できるようにした．
-
-
-%\subsubsection{「開かれた質問」・「閉じられた質問」・「その他」}
-%さらに提案システムでは，カウンセラーからの各質問においても，5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」なのか，Yes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」なのか，あるいは無駄話・相槌など，どちらにも分類されないような「その他」なのかを，ユーザーが手動で修正できるようにした．
-
-%カウンセラーからの各質問において，それぞれ「開かれた質問」・「閉じられた質問」・「その他」の選択肢が表示され，提案システム1で予測された選択肢にあらかじめチェックが入っているようプログラムした．そして，各単語をクライエントの話題の分野ごとにわけるラジオボタンと同様に，ブラウザ上でページをリロードしなくも，ラジオボタンの選択を変えることでシームレスにグラフが変化するようにした．
-
-
-%\subsubsection{「その他」}
-%「開かれた質問」「閉じられた質問」だけでなく，相槌や世間話などを含む「その他」を設けるべきと指摘されたので，提案システム１の仕組みにおいて「開かれた質問」と判定されなかったカウンセラーの発言のうち，終助詞「か」を含むものを「閉じられた質問」とし，それ以外を「その他」とした．
-
-%また，積み重ね折れ線グラフ上において，「閉じられた質問」を濃いグレー色の縦棒で，「その他」を薄いグレー色の縦棒で描画した．
-
-
-%\subsubsection{ラジオボタン表示時間}
-
-%提案システム1においてカウンセリング文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかっていたのを，提案システム2においては必要時間約4秒にまで抑えた．
-
-
-
-
-%\subsection{結果}
-
-%模擬データでの可視化結果を図\ref{fig:2_mogi}，X年8月クライエントCデータでの可視化結果を図\ref{fig:2_0801}に示す．
-% \begin{figure}
-%   \begin{center}
-%     \includegraphics[width=10cm]{2_mogi.png}
-%   \end{center}
-%   \caption{提案システム２の模擬データでの可視化結果}
-%   \label{fig:2_mogi}
-% \end{figure}
-% \begin{figure}
-%   \begin{center}
-%     \includegraphics[width=10cm]{2_0801.png}
-%   \end{center}
-%   \caption{提案システム２のX年8月クライエントCデータでの可視化結果}
-%   \label{fig:2_0801}
-% \end{figure}
-%
-%「愛」「仕事」などの分類に選択する単語について，品詞レベル（動詞・形容詞・名詞など）で分類することは不可能だと考えられる．たとえば，「仕事」という単語が出てきても，愛の課題としての夫についてのはなしをしているときは，そのシチュエーションでは愛の課題になる．動詞，形容詞も同じく，どの課題のシチュエーションの中で使用されているかによってどの分類かが決定されるので，この分類方法は不適当と考えられる．
-%よって，話題がこの３つの課題のどれに入っているか，という分類でしかできないと考えられる．つまり，１文がどの課題に入っているか，という分類が適当だと考えられる．
-%たとえば，「うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたがらなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそうなるのは絶対に許せない！！」というような文章については，最初の文は愛のタスク，第２文は仕事のタスク，第３文は愛のタスクととらえられる．
-
-
-%その他，使用した際に不便だと感じたこと，もし実用的なものにするにはどういう機能がついていればいいか等，意見を得た．
-
-%発話量の折れ線グラフの色分けについては，その人の関心が向いている話題によって分けられるので，分類方法の工夫が必要だと考えられる．
-%また実際には，話している中で関心がどんどん飛んでいく人が多いため，どうしていくか
-%いずれにしても，カウンセラーの発話については，十分とらえられると思います．質問形式（開かれた，閉じられた）と解釈と，相槌・その他と無駄話に分ける．無駄話と相槌は同レベルではなく，カウンセリングに必要かどうかの重みが違うので，分けた方がよいと考えられる．
-%カウンセラーのスーパーヴィジョンとして使用していく方が，今は妥当だと考えられる．そのためには，カウンセラーの発話内容を正確に分類していく方が的確に可視化できると考えられる．
-%心理臨床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になることが求められる．
-%一部のjsonファイルについて，質問形式の設定において，カウンセラーとクライエントの会話が混在しており，クライエントの会話については設定ができなかった．ここでクライエントの会話文を質問形式と無駄話にわける意味はないので，会話形式については，カウンセラーの発話だけわけるべきである．
-%また，このような混在があったときに，ユーザー側で削除できるようになるとスピーディーに修正が可能と考えられる．
-
-%\subsection{課題}
-
-%クライエントの発言について
-%単語単位ではなく文単位で「愛」「交友」「仕事」を分類すべき
-%カウンセラーの発言について
-%「開かれた質問」「閉じられた質問」だけでなく，「解釈」「相槌」「無駄話」も分類すべき
-%選択肢が多すぎる
-%分量に応じて縦棒の太さや間隔を変えることを提案
-
-
-
-
-
-%カウンセラーの質問を表す縦軸の太さや間隔をカウンセラーやクライエントの発言数に応じて変更されたデザインを提案した．
-
-
-
-
-%\section{提案システム３}
-
-
-%提案システム2でカウンセラーからされた指摘を元に，提案システム3を作成した．
-
-
-
-
-
-
-%ここでは主に，提案システム2が抱えていた問題への対処について述べる．
-
-
-%\subsubsection{「解釈」・「相槌」・「無駄話」}
-%提案システム2において，クライエントの発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類していた．
-%そこからさらに，提案システム3においては，カウンセラーの発言について「開かれた質問」「閉じられた質問」だけでなく，「その他」を設け，さらに「その他」を「解釈」「相槌」「無駄話」の3つに分類した．
-
-
-
-
-
-%\subsubsection{その他の改善点}
-%\begin{itemize}
-% \item クライエントの発言について，単語単位ではなく文単位で「愛」「交友」「仕事」を分類するようにした．
-% \item そもそも選択肢を減らすべきだったという問題に対しては，複数の可能性があるものについてのみ選択肢を表示することで改善を図った．
-% \item カウンセラーの１発言の分量に応じて縦棒の太さを，クライエントの１発言の分量に応じてカウンセラーの発言を表現する縦棒同士の間隔を変えた．こうすることによって，どの質問のあとにクライエントがたくさんの会話量を発したかがわかるようになった．
-% \item 見やすさの観点から，ラジオボタンによって発言の分類を選択する部分と，縦棒をマウスオーバーした際に実際の文が表示される部分を，積み重ね折れ線グラフの下側に，横に並べて表示するようにした．
-%\end{itemize}
-
-
-
-%\subsection{結果}
-
-%提案システム3をカウンセラー1名に使っていただき，以下のコメントを得た．
-%\begin{itemize}
-% \item 「質問形式が解釈，無駄話 の２種類しかないため，適切な分類ができませんでした．
- 
-%閉じられた質問は，本来カウンセラー側の解釈を確認するための質問です．しか
-%し，質問形としては開かれた質問と対をなしていますので，これはこれでおいて
-%おき，質問形式ではない解釈を「解釈」に分類するのが妥当と考えます．よって，
-%分類は，「開かれた質問」「閉じられた質問」「解釈」「相槌」「世間話」に
-%分けていただくといいですね．」
-%\end{itemize}
-
-
-%\subsection{課題}
 
 
 
 \section{カウンセラーからのフィードバックおよび要件抽出}
 
-%発話量の折れ線グラフの色分けについては，その人の関心が向いている話題によって分けられるので，分類方法の工夫が必要だと考えられる．
-%また実際には，話している中で関心がどんどん飛んでいく人が多いため，どうしていくか
-%いずれにしても，カウンセラーの発話については，十分とらえられると思います．質問形式（開かれた，閉じられた）と解釈と，相槌・その他と無駄話に分ける．無駄話と相槌は同レベルではなく，カウンセリングに必要かどうかの重みが違うので，分けた方がよいと考えられる．
-
-
-%\subsection{全ての選択肢を順番に表示}
-%選択肢をすべて表示してほしい
-%クライエントの発言に関するラジオボタンとカウンセラーの発言に関するラジオボタンをわけて表示していたが，これを実際の会話順に直して表示してほしいというコメントを得た．
-
-
-%\subsection{フォントサイズの向上}
-%フォントサイズ最小の部分が多くお年をめした方には読めないというコメントを得た1文1文を折りたたむことでフォントサイズ向上させる
-
-%\subsection{色彩の改善}
-%フォントサイズ最小の部分が多くお年をめした方には読めないというコメントを得た1文1文を折りたたむことでフォントサイズ向上させる
-
-%\subsection{配置}
-
-
-%\subsection{文の区切れ目}
-%例えば「ほんとに，朝も昼も見張られてないっていったら変な言い方ですけど，食べた
-%いときに食べられる状況っていうのがすごく久しぶりで，なんか自分でもどうなん
-%かなっていうのがあったんですけど，意外と普通にできたみたいな（笑）それは
-%，ありますね・・・なんか愛がいたら食べなきゃいけなかったりとかするし」という文に対して，「・・・」より前の部分は「愛」「交友」「仕事」のどの分類にも属さず，「・・・」より後の部分は「愛」に属するが，プロトタイプバージョンにおいては「・・・」を「．」のような1文1文の区切れ目に設定してないので，区別した判定変更が提案システムユーザー側でできない．
-
-%「・・・」を
 
 
 
-4.1節で説明したプロトタイプを
-%，2016年1月の「心の可視化研究会」にて12名の
-専門家に見ていただき，コメントを得た．そのコメントを元に，以下に述べるシステム要件を抽出した．
-\begin{itemize}
+4.1節で説明したプロトタイプを専門家に見ていただき，コメントを得た．そのコメントを元に，以下に述べるシステム要件を抽出した．
 
+\subsubsection{クライエントの発言に関する分類}
 
-
-\item 本システムでは，クライエントまたはカウンセラーの一発言を，話者の交代によって判断するものとする．つまり，クライエントの一発言は，カウンセラーが喋り終わってクライエントが喋り始めてから，クライエントが喋り終わってカウンセラーが喋り始めるまでである．また，カウンセラーの一発言は，クライエントが喋り終わってから，あるいはカウンセラーが話を切り出し始めてから，カウンセラーが喋り終わってクライエントが喋り始めるまでである．
-
-
-
+本システムでは，クライエントまたはカウンセラーの一発言を，話者の交代によって判断するものとする．つまり，クライエントの一発言は，カウンセラーが喋り終わってクライエントが喋り始めてから，クライエントが喋り終わってカウンセラーが喋り始めるまでである．また，カウンセラーの一発言は，クライエントが喋り終わってから，あるいはカウンセラーが話を切り出し始めてから，カウンセラーが喋り終わってクライエントが喋り始めるまでである．
 
 クライエントの発言に関する分類に関しては，1発言単位ではなく1文単位で「愛」「交友」「仕事」を分類するように変更することが求められる．
 たとえば，『うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．
 それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたが
 らなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそ
-うなるのは絶対に許せない！！』というような文章について，専門家は次の通りに分類する．最初の文は愛の課題，
-第2文は仕事の課題，第3文は愛の課題に分類する．
+うなるのは絶対に許せない！！』というような文章について，専門家は次の通りに分類する．第1文は愛の課題，第2文は仕事の課題，第3文は愛の課題に分類する．
 
+\subsubsection{カウンセラーの発言に関する分類}
 
-
-\item カウンセラーの発言の分類単位について，
-
-まずカウンセラーの発言も，次章で述べる初期分類は適当ではないことがあるので，クライエントからの返答だけでなく，カウンセラーの質問区分けも手動で修正したいというコメントを得た．
+カウンセラーの発言の分類について，まずカウンセラーの発言も，次章で述べる初期分類は適当ではないことがあるので，クライエントからの返答だけでなく，カウンセラーの質問区分けも手動で修正したいというコメントを得た．
 また，カウンセラーの発言について，「開かれた質問」「閉じられた質問」だけでなく，「解釈」「相槌」「無駄話」という分類を追加してほしいというコメントを得た．
 クライエントの発言に関する分類とは異なり，カウンセラーの発言に関する分類は1文単位ではなく1発言単位での分類でよいというコメントを得た．
 
 
 
-%\item どこがどの発言を表しているかわからない，またラジオボタンが多すぎてグラフが下の方にいく
-という問題に対しては，カウンセラーからクライエントへの質問を示す縦棒をマウスオーバーすることによって，周辺の発言を表示する機能を追加することで解決を図るべきである．
+
+\subsubsection{インタラクティブ性}
+
+現状ではその場でラジオボタンの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，ラジオボタンの選択を変えることでシームレスにグラフが変化してほしいというコメントを得た．
 
 
+\subsubsection{発言量の可視化}
+原文から，カウンセラーからクライエントへの質問事項の分類の指標として，クライエントの発言をうながしてクライエント自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであるというコメントを得た．ここから得られる要件は，クライエントの発言の分量に応じて，それをはさむカウンセラーの発言の縦棒をグラフ上で変えることであると考えた．
 
 
-\item 現状ではその場でラジオボタンの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，ラジオボタンの選択を変えることでシームレスにグラフが変化してほしいというコメントを得た．
+\subsubsection{軸の表示}
+積み重ね折れ線グラフにおいて，縦軸横軸が何を表しているかわからないので，軸を表示するように求められた．よって軸の表示が必要である．
 
 
-%\item %ローカルでの動作において，ラジオボタン表示に約10秒必要であり，その経過時間が問題視されていた．
-%また，プロトタイプでは，クライエントの発言に関する選択肢がすべて表示された後にカウンセラーに関する発言が表示されるようになっていた．しかしそれではわかりづらいというコメントを得た．その内容は次に示すものである．「クライエントの発言とカウンセラーの発言が交互に現れているその場所で，クラ
-%イエントの発言とカウンセラーの発言について分類できるようにしていただける
-%と混乱しないでいいのですが．クライエントとカウンセラーの発言が分離された
-%場所で分類していくと，特にカウンセラーの発言が何に向けてかがわかりにくく，
-%分類が難しくなるようでした．
-%（クライエントの発言を）クリックして，非表示を表示にした場合，カウンセラーの発言については（即座に）選択が
-%できないので，その場で選択できるようにしていただく方が便利ではないかと考
-%えます」
-
-
-
-%\item %クライエントの発言について，次に示すコメントを得た．
-%「『仕事』という単語が出てきても，
-%愛の課題としての夫についてのはなしをしているときは，そのシチュエーション
-%では愛の課題となります．動詞，形容詞も同じく，どの課題のシチュエーション
-%の中で使用されているかで決まりますので，この分類方法は不適当といえます．
-%よって，話題がこの３つの課題のどれに入っているか，という分類でしかでき
-%ないと考えます．つまり，１文がどの課題に入っているか，という分類ならばわ
-%かります．
-%たとえば，『うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．
-%それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたが
-%らなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそ
-%うなるのは絶対に許せない！！』というような文章です．最初の文は愛の課題，
-%第２文は仕事の課題，夫がそうなるのは絶対許せない！！は愛の課題です」
-%以上から，
-%単語単位ではなく文単位で「愛」「交友」「仕事」を分類するように変更することが求められる．
-
-
-
-
-\item 
-原文から，カウンセラーからクライエントへの質問事項の分類の指標として，クライエントの発言をうながしてクライエント自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきである%と考えられる
-．
-%分量に応じて縦棒の太さや間隔を変えることを提案したところ欲しいというコメントを得た．
-
-
-%\item 
-%文字色について次のコメントを得た．
-%「文字の色ですが，黄色と灰色は，バックの白とかぶって見えにくくなっ
-%ていると思います．私のモニターのブルーライトカットの影響かもしれませんが，
-%特に黄色は見えませんでした．よって，色を変えていただけると助かります．」したがって，本システムの，特にカウンセラーに関する縦棒や実際の記述の描画において改善する必要がある．
-
-\item 
-積み重ね折れ線グラフにおいて，縦軸横軸が何を表しているかわからないので，軸を表示するように求められた．
-%最後に，
-%文字の大きさについて次のコメントを得た．「モニターが小さい場合，１
-%面で見ようとするとフォントサイズが極めて小さくなり，老眼にとっては判別不
-%能となってしまいます．フォントサイズを上げることはできますか？
-%」したがって，フォントサイズを大きくする必要がある．
-
-\end{itemize}
