--- a/chapter5.tex
+++ b/chapter5.tex
@@ -3,7 +3,7 @@
  \begin{figure}
 %\begin{landscape}
    \begin{center}
-     \includegraphics[width=\linewidth,angle=90]{ver160203.png}
+     \includegraphics[width=\linewidth]{ver160203.png}
    \end{center}
    \caption{提案システムの模擬データでの可視化結果}
    \label{fig:ver160203}
@@ -46,7 +46,7 @@
  \begin{figure}
 %\begin{landscape}
    \begin{center}
-     \includegraphics[width=\linewidth,angle=90]{yomikomimae2.png}
+     \includegraphics[width=\linewidth]{yomikomimae2.png}
    \end{center}
    \caption{jsonファイル読み込み前のシステムスクリーンショット}
    \label{fig:yomikomimae2}
@@ -76,7 +76,7 @@
  \begin{figure}
 %\begin{landscape}
    \begin{center}
-     \includegraphics[width=\linewidth,angle=90]{5_2.png}
+     \includegraphics[width=\linewidth]{5_2.png}
    \end{center}
    \caption{カウンセラー発言初期分類方法}
    \label{fig:5_2}
@@ -93,7 +93,7 @@
  \begin{figure}
 %\begin{landscape}
    \begin{center}
-     \includegraphics[width=\linewidth,angle=90]{gamenseni.png}
+     \includegraphics[width=\linewidth]{gamenseni.png}
    \end{center}
    \caption{jsonファイル読み込み後のシステムスクリーンショット（説明付き）}
    \label{fig:gamenseni}
