--- a/chapter6.tex
+++ b/chapter6.tex
@@ -1,8 +1,8 @@
 本章ではユーザーによる，前章で述べた提案システムに対するの評価について述べる．
 
-%本システム自体に関してはこの研究が進んでいくことによって，心理臨床におけるスーパービジョンにおいて，客観性にもとづく指導が可能になっていけることを願っております．こういう着想はありませんでしたので，大変期待しているところです．とコメントをいただいている．
+%本システム自体に関してはこの研究が進んでいくことによって，心理臨床におけるスーパービジョンにおいて，客観性にもとづく指導が可能になっていけることを願っております．こういう着想はありませんでしたので，大変期待しているところです．とコメントを得た．
 
-%またプロトタイプから前章の提案システムへの変更についても概ね好評価をいただいている．
+%またプロトタイプから前章の提案システムへの変更についても概ね好評価を得た．
 
 
 
@@ -57,25 +57,25 @@
 
 
 
-まず模擬データを入力した際の出力結果を図\ref{fig:mogi_shutsuryoku}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:mogi_shutsuryoku}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」というカウンセラーの発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこのカウンセラー発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」というクライエントの発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
+まず模擬データを入力した際の出力結果を図\ref{fig:6_1}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」というカウンセラーの発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこのカウンセラー発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」というクライエントの発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
-     \includegraphics[width=\linewidth,angle=90]{mogi_shutsuryoku.png}
+     \includegraphics[width=\linewidth]{6_1.png}
    \end{center}
    \caption{模擬データ入力時の出力結果}
-   \label{fig:mogi_shutsuryoku}
+   \label{fig:6_1}
 %\end{landscape}
  \end{figure}
 
-次に，2014年11月19日クライエントB瞑想前のデータを入力した際の出力結果を図\ref{fig:141119bmae}に示す．
+次に，2014年11月19日クライエントB瞑想前のデータを入力した際の出力結果を図\ref{fig:6_2}に示す．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
-     \includegraphics[width=\linewidth,angle=90]{141119bmae.png}
+     \includegraphics[width=\linewidth]{6_2.png}
    \end{center}
    \caption{2014年11月19日クライエントB瞑想前データ入力時の出力結果}
-   \label{fig:141119bmae}
+   \label{fig:6_2}
 %\end{landscape}
  \end{figure}
 \begin{itemize}
@@ -97,7 +97,7 @@
 6.1節で述べたデータをカウンセラー1名に渡し，Web上から本提案システムを利用していただき、主に本システムの使い勝手についてコメントを得た．
 
 まず本提案システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存または出力する機能が求められている．これに関しては，長い文章を入力した際に，その日
-だけの使用では終わらないことが多いため実際，開くたびに毎回同じことをさせられるのは，大変苦痛になってくるので，この点について改善しないと実用できないというコメントをいただいている．
+だけの使用では終わらないことが多いため実際，開くたびに毎回同じことをさせられるのは，大変苦痛になってくるので，この点について改善しないと実用できないというコメントを得た．
 
 
 %ラジオボタンの使い勝手に関するコメント
