--- a/main.tex
+++ b/main.tex
@@ -49,5 +49,6 @@
 %	\bibitem{zokad} 野田俊作，THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER，New York : Haper, Row, Publishers, Inc.，(1956).
 %\end{thebibliography}
 \appendix
+\chapter{図表}
 
 \end{document}
