--- a/chapter6.tex
+++ b/chapter6.tex
@@ -6,26 +6,26 @@
 
 
 
-\section{入力データの前処理}
+%\section{入力データの前処理}
 
 
-まず本提案システム評価で使用する入力データについて述べる．前章のプロトタイプと本章の提案システムにおいて，入力データは共通して，下記に述べる全16個のデータを使用した．
-本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料を使用した．用いた資料の事例検討会の日付は2014年11月11日，2015年1月24日，同年3月28日，同年10月17日，同年11月28日のものを使用した．
-後述する提案システムに読み込ませるための前処理として，まず，各カウンセリング回ごとにテキストデータを分けた．尚，2015年10月17日および同年11月28日事例検討会用資料については，カウンセリングした年が「X年」として伏せられていたため，本論文内でも以降，これら2点の資料内におけるカウンセリングの年をX年と表記する．
+%まず本提案システム評価で使用する入力データについて述べる．前章のプロトタイプと本章の提案システムにおいて，入力データは共通して，下記に述べる全16個のデータを使用した．
+%本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料を使用した．用いた資料の事例検討会の日付は2014年11月11日，2015年1月24日，同年3月28日，同年10月17日，同年11月28日のものを使用した．
+%後述する提案システムに読み込ませるための前処理として，まず，各カウンセリング回ごとにテキストデータを分けた．尚，2015年10月17日および同年11月28日事例検討会用資料については，カウンセリングした年が「X年」として伏せられていたため，本論文内でも以降，これら2点の資料内におけるカウンセリングの年をX年と表記する．
 
 
-\begin{itemize}
-\item 2014年9月11日カウンセリング（2014年11月11日事例検討会資料より）
-\item 2014年11月19日カウンセリング（2015年1月24日事例検討会資料より）
-\item 2014年1月29日カウンセリング（2015年3月28日事例検討会資料より）
-\item X年8月10日カウンセリング（2015年10月17日事例検討会資料より）
-\item X年10月1日カウンセリング（同上）
-\item X年10月30日カウンセリング（2015年11月28日事例検討会資料より）
-\end{itemize}
-2014年9月11日についてはクライエントA,Bの2名がいたので，この日のデータについてはさらにクライエントごとにテキストデータを分けた．またこのクライエントAは2014年1月29日のクライエントと同一人物，クライエントBは2014年11月19日のクライエントと同一人物である．以降，本論文においてもこの2名のクライエントを順にクライエントA,Bと呼ぶ．
-一方，X年8月10日，X年10月1日，X年10月30日では同一の一名のクライエントが対象とされていた．対象データ内では「クライエントA」と呼ばれているが，前述のクライエントAとは同一人物ではないため，以降，本論文中においてはクライエントCと呼ぶことにする．
+%\begin{itemize}
+%\item カウンセリング日程A（某年11月11日事例検討会資料より）
+%\item カウンセリング日程B（某年1月24日事例検討会資料より）
+%\item カウンセリング（2015年3月28日事例検討会資料より）
+%\item カウンセリング（2015年10月17日事例検討会資料より）
+%\item カウンセリング（同上）
+%\item カウンセリング（2015年11月28日事例検討会資料より）
+%\end{itemize}
+%2014年9月11日についてはクライエントA,Bの2名がいたので，この日のデータについてはさらにクライエントごとにテキストデータを分けた．またこのクライエントAは2014年1月29日のクライエントと同一人物，クライエントBは2014年11月19日のクライエントと同一人物である．以降，本論文においてもこの2名のクライエントを順にクライエントA,Bと呼ぶ．
+%一方，X年8月10日，X年10月1日，X年10月30日では同一の一名のクライエントが対象とされていた．対象データ内では「クライエントA」と呼ばれているが，前述のクライエントAとは同一人物ではないため，以降，本論文中においてはクライエントCと呼ぶことにする．
 
-ここで2014年9月11日，2014年11月19日，2014年1月29日においてはヨーガの瞑想前とヨーガの瞑想後のテキストデータが存在したので，瞑想前後で分けたテキストデータも用意した．%つまり
+%ここで2014年9月11日，2014年11月19日，2014年1月29日においてはヨーガの瞑想前とヨーガの瞑想後のテキストデータが存在したので，瞑想前後で分けたテキストデータも用意した．%つまり
 %\begin{itemize}
 %\item 2014年9月11日クライエントA
 %\item 2014年9月11日クライエントA瞑想前
